Bug fixes and enhancements: - Cropped length of links in minimized view - Made minimized header into button - Fixed path-link bug - When maximizing view, window now scrolls to the location of maximized element - Removed empty citations / files - Fixed bug with 0 filesize => NaN undefined

--- a/html/css/orfan.css
+++ b/html/css/orfan.css
@@ -41,6 +41,15 @@
 	margin: 2px;
 }
 
+.header-btn {
+	width:100%;
+	padding: 5px;
+}
+
+.header-btn h4 {
+	margin: 2px;
+}
+
 .info-container-table th {
 	width: 15%;
 }
@@ -55,6 +64,10 @@
 
 .panel-heading {
 	padding: 5px 15px;
+}
+
+.min-view .panel-heading {
+	padding: 5px 5px;
 }
 
 .thumbnail-container {
